Improve lints
